<resources>
    <string name="app_name">SuperHeroes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="marvel_super_heroes">Marvel Super Heroes</string>
    <string name="list">List</string>
    <string name="character_powerstats">Character Powerstats</string>
    <string name="character_facts">Character Facts</string>
    <string name="full_name">Full Name:</string>
    <string name="alter_egos">Alter Egos:</string>
    <string name="aliases">Aliases:</string>
    <string name="place_of_birth">Place of birth:</string>
    <string name="intelligence">Intelligence</string>
    <string name="strength">Strength</string>
    <string name="speed">Speed</string>
    <string name="durability">Durability</string>
    <string name="power">Power</string>
    <string name="combat">Combat</string>
    <string name="alignment">Alignment</string>
    <string name="character_appearance">Character Appearance</string>
    <string name="gender_and_race">Gender and race</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="eye_color">Eye color</string>
    <string name="hair_color">Hair color</string>
</resources>